[package]
name = "drone-teleport"
authors = ["Charles R. Portwood II <charlesportwoodii@erianna.com>"]
description = "A drone plugin for executing remote commands over SSH, through Teleport Machine IDs"
repository = "https://github.com/charlesportwoodii/drone-teleport"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.11", features = ["full"] }
glob = { version = "^0.3" }
human_bytes = { version = "^0.3" }
zstd = { version = "^0.11" }
rand = { version = "^0.8" }
futures = { version = "^0.3" }
tar = { version = "^0.4" }
derivative = { version = "^2.2" }
clap = { version = "^3.2", features = ["derive", "env"] }
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1", features = ["raw_value"] }
openssh = { version = "^0.9"}
openssh-sftp-client = { version = "^0.12" }
colored = { version = "^2.0" }